--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arco Uno Basic</title>
+    <title>Arco Tiptap Editor</title>
     <meta name="description" content="Opinionated Vite Starter Template" />
   </head>
   <body class="font-sans dark:text-white dark:bg-hex-121212">
